# docker_homework_2

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
logistic/: views.py
stocks_products/: settings.py
